--- a/src/component/bar/Menu.css
+++ b/src/component/bar/Menu.css
@@ -161,6 +161,10 @@
     margin-right: 5px;
 }
 
+.Menu-image img {
+    width: 35px;
+}
+
 .Menu-image-text {
     float: left;
 }
